# ------------------------------------------------------------------------
#
#                         CMakeLists.txt for DoubleProbeAnalysis
#                                        V 0.01
#
#                            (c) Brian Lynch February, 2015
#
# ------------------------------------------------------------------------
cmake_minimum_required (VERSION 2.6)
project(DoubleLangmuirProbe)

#Tell cmake to look in the following subdirectories
#for other files named CMakeLists.txt
add_subdirectory (src)
